# dcc

./: .gitignore  .npmrc  Cargo.toml  README.md  dcc-frontend-layout-refactor.patch  docker-compose.yml  main.sh  package.json  tsconfig.json  turbo.json
apps/api/: .env.example  CHANGELOG.md  Cargo.toml  OPTIMIZATIONS_SUMMARY.md  PERFORMANCE_ANALYSIS.md  RATE_LIMITING_GUIDE.md  README.md  ROADMAP.md  TODO.md
apps/api/migrations/: 0001_initial.sql  0002_user_badges.sql  0003_user_two_factor.sql  0004_voice_preferences.sql  0005_official_member_badge.sql  0006_server_permissions.sql  0007_add_missing_indexes.sql  0008_add_full_text_search.sql  0009_add_threads.sql  0010_add_channel_display_styles.sql  0011_add_user_display_name.sql  0012_add_avatar_decorations.sql  0013_add_channel_reads.sql  0014_voice_filter_preferences.sql
apps/api/src/: config.rs  error.rs  main.rs  state.rs
apps/api/src/api/: auth.rs  channels.rs  dms.rs  friends.rs  link_preview.rs  messages.rs  mod.rs  reads.rs  search.rs  servers.rs  threads.rs  users.rs
apps/api/src/api/servers/: categories.rs  channels.rs  common.rs  invites.rs  members.rs  moderation.rs  overwrites.rs  roles.rs  servers_crud.rs  structure.rs
apps/api/src/gateway/: events.rs  handler.rs  mod.rs
apps/api/src/middleware/: auth.rs  mod.rs  ratelimit.rs  request_id.rs
apps/api/src/models/: channel.rs  friendship.rs  message.rs  mod.rs  server.rs  user.rs
apps/api/src/services/: auth.rs  cache.rs  mod.rs  moderation.rs  pubsub.rs
apps/web/: CHANGELOG.md  README.md  ROADMAP.md  TODO.md  eslint.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
apps/web/docs/: ui-architecture.md
apps/web/scripts/: dev-https.ps1  (+2 more)
(+248 files in other folders)
