[package]
name    = "dcc-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dcc-api"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio       = { version = "1",    features = ["full"] }
tokio-stream = "0.1"
futures     = "0.3"

# HTTP framework
axum        = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra  = { version = "0.9", features = ["cookie", "typed-header"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace", "timeout", "fs"] }
hyper       = "1"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio", "tls-rustls",
  "postgres", "uuid", "chrono", "json",
] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Auth
jsonwebtoken = "9"
argon2       = "0.5"
rand         = "0.8"
totp-rs      = { version = "5.7", features = ["gen_secret", "otpauth", "qr"] }
aes-gcm      = "0.10"

# Types
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# Hashing / encoding
sha2         = "0.10"
base64       = "0.22"
urlencoding  = "2"
time         = "0.3"
regex        = "1"

# Config / logging
dotenvy             = "0.15"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Redis pub/sub
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client (OAuth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
